@@ -1,4 +1,4 @@
-4.03.0+dev5-2014-10-15
+4.03.0+dev6-2015-01-20
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
